objects/Profile_Settings__c.object
<CustomObject>
    <fields>
        <fullName>MBE_Products_Services_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Products / Services Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_References2_Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE References2 Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_References_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_References_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_References_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE References Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Revenue_Range_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Revenue_Range_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Revenue_Range_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Revenue Range Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Salutation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Salutation_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Salutation_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Salutation Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Secondary_Business_Category_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Secondary_Business_Category_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Secondary_Business_Category_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Secondary Business Category Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Secondary_Email_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Secondary_Email_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Secondary_Email_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Secondary Email Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Small_Business_Image_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Small_Business_Image_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Small_Business_Image_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Small Business Image Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_State_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE State Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Title_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Title_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Title_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Title Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Uploaded_Company_Brochures_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Uploaded_Company_Brochures_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Uploaded_Company_Brochures_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Uploaded Company Brochures Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Uploaded_Video_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Uploaded_Video_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Uploaded_Video_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Uploaded Video Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Website_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Website_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Website_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Website Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Work_Address_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Work_Address_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Work_Address_Visibility__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Work Address Visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Work_Phone_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Work_Phone_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Work_Phone_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Work Phone Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Year_in_Business_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Year_in_Business_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Year_in_Business_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Year in Business Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Zip_Code_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Zip Code Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manufatures_Country__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manufatures Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NAICS_Codes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NAICS Codes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Of_Employees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Number Of Employees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Business_Category__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Business Category</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Products_NOT_interested_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Products_NOT_interested_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Products_NOT_interested_visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate Products NOT interested visibl</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Products_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Products / Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reference2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>References__c</fullName>
        <defaultValue>false</defaultValue>
        <label>References</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revenue_Range__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revenue Range</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salutation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scope_of_Work2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scope of Work2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scope_of_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scope of Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Business_Category__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Secondary Business Category</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Secondary Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Small_Business_IMAGE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Small Business IMAGE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uploaded_Company_Brochures__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uploaded Company Brochures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uploaded_Video__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uploaded Video</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Address__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Work Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year_in_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Year in Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year_in_business_Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Year in business Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zip Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>exceptional_keywords__c</fullName>
        <defaultValue>true</defaultValue>
        <label>exceptional keywords</label>
        <type>Checkbox</type>
    </fields>
    <label>Profile Settings</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Profile Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Profile Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>